# bilibili-collection

./: README.md  main.py  pyproject.toml  skills-lock.json  streamlit_app.py
.github/workflows/: update-collection-index.yml
data/: collection_index.json
scripts/: update_collection_index.py
